# kdt-autodrive4-team3-week11-12

./: Decision_Making.ipynb  Pull_Request_final.md  Pull_Request_mid.md  README.md  check_function.ipynb  init.cpp  intrinsic_calibration.py  intrinsic_result.txt  project_management.md  ros_package_structure.md  traffic_light.ipynb  traffic_light.py  trt_detection_수정.ipynb  trt_detection_수정2.ipynb
controller/: README.md  ros_package_structure.md
controller/launch/: team3-controller.launch
controller/src/: team3-controller.cpp
controller/templates/: Example_CMakeLists_library.txt
object_checker/: CMakeLists.txt  package.xml
object_checker/launch/: object_checker.launch
object_checker/msg/: object_control_msg.msg
object_checker/pkg/: CMakeLists.txt  Example_CMakeLists _msg.txt  package.xml
object_checker/src/: object_checker.cpp
sensor_traffic_light/launch/: t3_sensor_traffic_light.launch
sensor_traffic_light/src/: image_process.cpp  t3_sensor_traffic_light.py
t3_car_study/: CMakeLists.txt  package.xml
t3_car_study/launch/: t3_car_study.launch
t3_car_study/src/: t3_car_study.cpp
t3_controller/: CMakeLists.txt  README.md  package.xml
t3_controller/launch/: t3_config.yaml  t3_controller.launch
t3_controller/src/: t3_controller.cpp
t3_msgs/: CMakeLists.txt  package.xml
t3_msgs/msg/: camera_calibrate_data.msg  lane_data.msg  traffic_light_data.msg  (+1 more)
t3_sensor_lane_cam/: CMakeLists.txt  package.xml
t3_sensor_object/: CMakeLists.txt
t3_sensor_stop_line/: CMakeLists.txt  package.xml
t3_sensor_traffic_light/: CMakeLists.txt  package.xml
templates/: Example_package_msg.xml
(+25 files in other folders)
