<?xml version="1.0"?>
<package format="2">
  <version>0.0.0</version>
  <name>t3_car_study</name>
  <description>t3_car_study</description>
  <maintainer email="team3@todo.todo">team3</maintainer>
  <license>UNLICENSED</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- dependencies -->
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>xycar_motor</build_depend>
  <build_export_depend>xycar_motor</build_export_depend>
  <exec_depend>xycar_motor</exec_depend>

  <export></export>
</package>
